@@ -1,383 +1,360 @@
-package br.ufrpe.time_share.negocio;
+package br.ufrpe.timeshare.negocio;
+
+import br.ufrpe.timeshare.dados.IRepositorioEstadia;
+import br.ufrpe.timeshare.dados.IRepositorioReservas;
+import br.ufrpe.timeshare.dados.RepositorioEstadia;
+import br.ufrpe.timeshare.dados.RepositorioReservas;
+import br.ufrpe.timeshare.excecoes.*;
+import br.ufrpe.timeshare.negocio.beans.*;
+
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
-import java.time.LocalDate;
-import br.ufrpe.time_share.dados.IRepositorioEstadia;
-import br.ufrpe.time_share.dados.IRepositorioReservas;
-import br.ufrpe.time_share.excecoes.*;
-import br.ufrpe.time_share.negocio.beans.Bem;
-import br.ufrpe.time_share.negocio.beans.Cota;
-import br.ufrpe.time_share.negocio.beans.Estadia;
-import br.ufrpe.time_share.negocio.beans.Promocao;
-import br.ufrpe.time_share.negocio.beans.Reserva;
-import br.ufrpe.time_share.negocio.beans.Usuario;
 
 public class ControladorReservas {
     private IRepositorioReservas repositorioReservas;
     private IRepositorioEstadia repositorioEstadia;
 
-    public ControladorReservas(IRepositorioReservas instanciaInterfaceR, IRepositorioEstadia instanciaInterfaceE) {
-        this.repositorioReservas = instanciaInterfaceR;
-        this.repositorioEstadia = instanciaInterfaceE;
+    public ControladorReservas() {
+        this.repositorioReservas = RepositorioReservas.getInstancia();
+        this.repositorioEstadia = RepositorioEstadia.getInstancia();
     }
 
-    
-    //check in
-    public String checkin(int idReserva, LocalDateTime dataInicio) throws ReservaNaoExisteException, ReservaJaCanceladaException, ForaPeriodoException {
+
+    public String checkin(int idReserva) throws EstadiaJaInicializadaException, ReservaNaoExisteException, ReservaJaCanceladaException, ForaPeriodoException {
+        LocalDateTime dataInicio = LocalDateTime.now();
         Reserva reservaRelacionada = repositorioReservas.buscar(idReserva);
-        Estadia estadia = null;
-        int duracao=0;
+        Estadia verificadorEstadia = repositorioEstadia.buscarEstadiaPorReserva(idReserva);
+        if (verificadorEstadia != null) {
+            throw new EstadiaJaInicializadaException("Check-in ja realizado nesta reserva.");
+        }
         if (reservaRelacionada == null) {
-            throw new ReservaNaoExisteException("Reserva inexistente");
+            throw new ReservaNaoExisteException("Reserva inexistente.");
+        }
+        //criacao de id aleatorio
+        int idAleatorio = 0;
+        for (int i = 0; i < 1; ) {
+            idAleatorio = ThreadLocalRandom.current().nextInt(1001, 99999 + 1);
+            if (repositorioEstadia.buscar(idAleatorio) == null) {
+                i++; // Sai do loop se o ID for unico
+            }
+        }
+        Estadia estadia = new Estadia(idAleatorio, reservaRelacionada);
+        if (dataInicio.isBefore(reservaRelacionada.getDataInicio()) || dataInicio.isAfter(reservaRelacionada.getDataFim())) {
+            throw new ForaPeriodoException("Data de inicio fora do periodo da reserva.");
         } else {
-            if (reservaRelacionada.isCancelada()) {
-                throw new ReservaJaCanceladaException("Reserva ja cancelada");
-            } else {
-                int idAleatorio = 1001 + ThreadLocalRandom.current().nextInt(10000);
-                estadia = new Estadia(idAleatorio, reservaRelacionada);
-                //verifica se data de check in esta no periodo reservado
-                if (dataInicio.isBefore(reservaRelacionada.getDataInicio()) || dataInicio.isAfter(reservaRelacionada.getDataFim())) {
-                    throw new ForaPeriodoException("Data de inicio fora do periodo da reserva");
-                } else {
-                    estadia.setDataInicio(dataInicio);
-                    estadia.setDataFim(reservaRelacionada.getDataFim());
-                    duracao = estadia.calcularDuracao();
-                    repositorioEstadia.cadastrar(estadia); //cadastra estadia no repositorio
-                }
-            }
+            estadia.setDataInicio(dataInicio);
+            estadia.setDataFim(null); //a data final da estadia so vai ser alterada no check-out
+            repositorioEstadia.cadastrar(estadia);
         }
-        return gerarComprovanteEstadia(estadia,duracao);
-    }
-
-    //ao passar o tempo reservado, tenho a opcao de prolongar
-    //a estadia ou fazer check out
-    //pode ser cobrada uma taxa extra
-    //data para dia
-    public String prolongarEstadia(Estadia estadia, int quantidadeDias, LocalDateTime agora) throws ReservaNaoExisteException, ReservaJaCanceladaException, ForaPeriodoException,PeriodoJaReservadoException,PeriodoNaoDisponivelParaReservaException,ReservaNaoExisteException,CotaJaReservadaException {
-        LocalDateTime novaDataFim = estadia.getDataFim().plusDays(quantidadeDias);
-        if (estadia.getDataFim().equals(agora) || estadia.getDataFim().isBefore(agora)) {
-                alterarPeriodoReserva(estadia.getReserva().getId(), agora, novaDataFim);
-                estadia.setDataFim(novaDataFim);
-        }
-        //retorna comprovante de novo periodo reservado 
-        //que sera utilizado na estadia
-        return gerarComprovanteReserva(estadia.getReserva(), estadia.getReserva().calcularDuracaoReserva());
+        return gerarComprovanteEstadia(estadia);
     }
 
 
-    public String checkout(Estadia estadia, LocalDateTime agora) throws ReservaNaoExisteException, ReservaJaCanceladaException {
-        Reserva reserva = null;
-        if (estadia.getDataFim().equals(agora) || estadia.getDataFim().isBefore(agora)) {
-            reserva = repositorioReservas.buscarReserva(estadia.getReserva());
-            if (reserva == null) {
-                throw new ReservaNaoExisteException("Reserva inexistente");
-            } else {
-                if (reserva.isCancelada() ) {
-                    throw new ReservaJaCanceladaException("Reserva ja cancelada");
-                } else {
-                    repositorioReservas.remover(reserva); //remove reserva utilizada do repositorio
-                }
-            }
+    public String prolongarEstadia(int idEstadia, int quantidaDias) throws ReservaNaoExisteException, ReservaJaCanceladaException, ForaPeriodoException, PeriodoJaReservadoException, PeriodoNaoDisponivelParaReservaException, ReservaNaoExisteException, CotaJaReservadaException, ReservaJaExisteException, DadosInsuficientesException, EstadiaNaoExisteException, UsuarioNaoPermitidoException, OperacaoNaoPermitidaException {
+        Estadia estadia = repositorioEstadia.buscar(idEstadia);
+        if (estadia == null) {
+            throw new EstadiaNaoExisteException("Estadia inexistente.");
         }
-        return gerarComprovanteEstadia(estadia, estadia.calcularDuracao());
+        Reserva reserva = estadia.getReserva();
+        LocalDateTime novaDataFim = reserva.getDataFim().plusDays(quantidaDias);
+        if (LocalDateTime.now().isBefore(reserva.getDataFim())) {
+            alterarPeriodoReserva(reserva.getId(), reserva.getDataInicio(), novaDataFim, reserva.getUsuarioComum());
+        }
+        return gerarComprovanteReserva(reserva);
     }
+
+
+    public String checkout(int idEstadia) throws ReservaNaoExisteException, ReservaJaCanceladaException, EstadiaNaoExisteException {
+        LocalDateTime agora = LocalDateTime.now();
+        Estadia estadia = repositorioEstadia.buscar(idEstadia);
+        if (estadia == null) {
+            throw new EstadiaNaoExisteException("Estadia inexistente.");
+        }
+        Reserva reserva = repositorioReservas.buscarReserva(estadia.getReserva());
+        if (reserva == null) {
+            throw new ReservaNaoExisteException("Reserva inexistente.");
+        } else {
+            estadia.setDataFim(agora);
+            repositorioReservas.remover(reserva); //remove reserva do repositorio
+        }
+        return gerarComprovanteEstadia(estadia);
+    }
+
 
     //metodo para criar reserva/ reservar
     public String criarReserva(LocalDateTime dataInicio, LocalDateTime dataFim, Usuario usuarioComum, Bem bem)
             throws DadosInsuficientesException, ReservaJaExisteException, ForaPeriodoException, PeriodoJaReservadoException, PeriodoNaoDisponivelParaReservaException, ReservaNaoExisteException, CotaJaReservadaException {
-                double taxa = 0.00;
         if (bem == null || dataInicio == null || dataFim == null || usuarioComum == null) {
             throw new DadosInsuficientesException("Bem, data de inicio, data final ou usuario nao podem ser nulos.");
         }
-
+        //verificar se periodo valido e se ja existe reserva ou uma cota comprada naquele periodo
+        verificarPeriodo(dataInicio, dataFim, bem, usuarioComum);
         //criacao de id aleatorio
-    int idNumeroReserva = 0;
-for (int i = 0; i < 1;) { 
-    idNumeroReserva = ThreadLocalRandom.current().nextInt(1001, 99999 + 1);
-    if (repositorioReservas.buscar(idNumeroReserva) == null) {
-        i++; // Sai do loop se o ID for unico
-    }
-}
-        //cria reserva
-        Reserva reserva = new Reserva(idNumeroReserva, dataInicio, dataFim, usuarioComum, bem);
-
-        //verifica se reserva ja existe
-        Reserva reservaExistente = repositorioReservas.buscarReserva(reserva);
-        if (reservaExistente != null) {
-            throw new ReservaJaExisteException("Reserva ja existe.");
+        int idNumeroReserva = 0;
+        for (int i = 0; i < 1; ) {
+            idNumeroReserva = ThreadLocalRandom.current().nextInt(1001, 99999 + 1);
+            if (repositorioReservas.buscar(idNumeroReserva) == null) {
+                i++; //sai do loop se o ID for unico
+            }
         }
-
-            verificarPeriodo(reservaExistente, dataInicio, dataFim);
-       
-
-        //cadastra reserva no repositorio e calcula taxa
-        int dias = reserva.calcularDuracaoReserva();
+        Reserva reserva = new Reserva(idNumeroReserva, dataInicio, dataFim, usuarioComum, bem);
         repositorioReservas.cadastrar(reserva);
-        taxa = calcularTaxaExtra(reserva, dias);
-    
-    return gerarComprovanteReserva(reserva,taxa);
+        return gerarComprovanteReserva(reserva);
     }
 
 
-//metodo para reservar o periodo completo de 1 cota
-public String reservaPeriodoCota (Cota cota) throws CotaNaoExisteException, ProprietarioNaoIdentificadoException, DadosInsuficientesException, ReservaJaExisteException, ForaPeriodoException, PeriodoJaReservadoException, PeriodoNaoDisponivelParaReservaException, ReservaNaoExisteException, CotaJaReservadaException {
-    String reservaFeita=null;
-    if (cota == null) {
-        throw new CotaNaoExisteException("Cota inexistente");
+    //metodo para reservar o periodo completo de 1 cota
+    public String reservaPeriodoCota(Cota cota, Usuario usuario) throws UsuarioNaoPermitidoException, DadosInsuficientesException, ProprietarioNaoIdentificadoException, DadosInsuficientesException, ReservaJaExisteException, ForaPeriodoException, PeriodoJaReservadoException, PeriodoNaoDisponivelParaReservaException, ReservaNaoExisteException, CotaJaReservadaException {
+        String reservaFeita;
+        if (cota == null || usuario == null) {
+            throw new DadosInsuficientesException("Cota inexistente.");
+        }
+        if (cota.getProprietario() != null && !cota.getProprietario().equals(usuario)) {
+            throw new UsuarioNaoPermitidoException("Cota pertence a outro usuario.");
+        }
+        reservaFeita = criarReserva(cota.getDataInicio(), cota.getDataFim(), cota.getProprietario(), cota.getBemAssociado());
+        return reservaFeita;
     }
 
-    if (cota.getProprietario() == null) {
-        throw new ProprietarioNaoIdentificadoException("Cota sem proprietário");
+    private void verificarPeriodo(LocalDateTime dataInicio, LocalDateTime dataFim, Bem bem, Usuario usuario) throws ReservaJaExisteException, PeriodoNaoDisponivelParaReservaException, ForaPeriodoException {
+        //verifica se datas sao validas
+        if (dataInicio.isAfter(dataFim)) {
+            throw new ForaPeriodoException("A data inicial nao pode ser depois da data final.");
+        }
+        //verifica se reserva ja existe dentro daquele periodo
+        if (repositorioReservas.verificarConflitoNaReserva(bem.getId(), dataInicio, dataFim)) {
+            throw new ReservaJaExisteException("Conflito de Periodo. Reserva não realizada.");
+        }
+        //verifica se reserva esta dentro de uma cota que ja foi comprada e nao pertence ao usuario
+        if (verificarConflitoDeDatasCota(bem, dataInicio, dataFim, usuario)) {
+            throw new PeriodoNaoDisponivelParaReservaException("O periodo esta dentro de uma cota comprada por outro usuario.");
+        }
     }
-   reservaFeita = criarReserva(cota.getDataInicio(), cota.getDataFim(), cota.getProprietario(), cota.getBemAssociado());
-    return reservaFeita;
-    
-}
 
 
-    //metodo para cancelar reserva
-    //e verificar reembolso
-    //liberar periodo da cota para ser reservada
-    //caso alguma tenha sido usada na reserva
-    public void cancelarReserva(int idReserva) throws ReservaNaoExisteException, ReservaJaCanceladaException, ReservaNaoReembolsavelException, CotaJaReservadaException {
+    public void liberarPeriodoCota(Cota cota, int idReserva, Usuario usuario) throws DadosInsuficientesException, ReservaNaoExisteException, OperacaoNaoPermitidaException, UsuarioNaoPermitidoException {
+        if (cota == null || idReserva == 0) {
+            throw new DadosInsuficientesException("Dados insuficientes.");
+        }
         Reserva reservaCancelada = repositorioReservas.buscar(idReserva);
-        
+
+        if (reservaCancelada == null) {
+            throw new ReservaNaoExisteException("Reserva com este ID nao existe.");
+        }
+        if (!reservaCancelada.getUsuarioComum().equals(usuario)) {
+            throw new UsuarioNaoPermitidoException("Reserva nao vinculada a este usuario.");
+        }
+        if (!reservaCancelada.getDataInicio().equals(cota.getDataInicio()) || !reservaCancelada.getDataFim().equals(cota.getDataFim())) {
+            throw new OperacaoNaoPermitidaException("A reserva nao foi realizada dentro da cota, verifique o periodo completo da reserva para cancela-la.");
+        }
+        cota.setStatusDeDisponibilidadeParaReserva(true);
+        repositorioReservas.remover(reservaCancelada);
+    }
+
+
+    public String cancelarReserva(int idReserva, Usuario usuario) throws ReservaNaoExisteException, ReservaJaCanceladaException, CotaJaReservadaException, UsuarioNaoPermitidoException, ReservaNaoReembolsavelException, DadosInsuficientesException {
+        Reserva reservaCancelada = repositorioReservas.buscar(idReserva);
+        double reembolso;
         if (reservaCancelada == null) {
             throw new ReservaNaoExisteException("Reserva inexistente");
         }
-        ArrayList<Cota> cotasBemAssociadoReserva = reservaCancelada.getBem().getCotas(); 
-            if (reservaCancelada.isCancelada()) {
-                throw new ReservaJaCanceladaException("Reserva ja cancelada");
-            } 
-
-        reservaCancelada.cancelarReserva();
-        //liberando cota
-       for (Cota cota : cotasBemAssociadoReserva) {
-           if (!cota.isStatusDeDisponibilidadeParaReserva() && reservaCancelada.getUsuarioComum().equals(cota.getProprietario())) {
-               if ( (reservaCancelada.getDataInicio().isBefore(cota.getDataFim()) || reservaCancelada.getDataInicio().isEqual(cota.getDataFim())) &&
-               (reservaCancelada.getDataFim().isAfter(cota.getDataInicio()) || reservaCancelada.getDataFim().isEqual(cota.getDataInicio()))) {
-                   cota.setStatusDeDisponibilidadeParaReserva(true);
-               }
-           }
-       }
-             reembolsar(reservaCancelada);   
+        Estadia estadia = repositorioEstadia.buscarEstadiaPorReserva((int) reservaCancelada.getId());
+        if (estadia != null && estadia.getDataInicio() != null && estadia.getDataFim() == null) {
+            throw new ReservaJaCanceladaException("Estadia ja iniciada. Nao pode ser cancelada.");
+        }
+        ArrayList<Cota> cotasBemAssociadoReserva = reservaCancelada.getBem().getCotas();
+        if (!reservaCancelada.getBem().getCadastradoPor().equals(usuario) || !reservaCancelada.getUsuarioComum().equals(usuario)) {
+            throw new UsuarioNaoPermitidoException("Reserva nao vinculada a este usuario.");
+        }
+        reembolso = reembolsar(reservaCancelada);
+        String comprovanteCancelamento = "FLEX SHARE\n" + "____________________________\n" + "COMPROVANTE DE CANCELAMENTO DE RESERVA: \n" + "__________________________________________________\n" + "RESERVA: \n" + reservaCancelada.getId() + "\n Periodo: " + reservaCancelada.getDataInicio().format(DateTimeFormatter.ofPattern("dd/MM/yyyy")) + "-" + reservaCancelada.getDataFim().format(DateTimeFormatter.ofPattern("dd/MM/yyyy")) + "\n REEMBOLSO: R$" + reembolso;
+        repositorioReservas.remover(reservaCancelada);
+        return comprovanteCancelamento;
     }
 
+    public void cancelarListaReservas (List<Reserva> aCancelar) {
+        if(aCancelar == null) {
+            for(Reserva reserva : aCancelar) {
+                repositorioReservas.remover(reserva);
+            }
+        }
+    }
 
     //metodo para reembolso apos cancelamento
-    public double reembolsar(Reserva reserva) throws ReservaNaoReembolsavelException, NullPointerException,ReservaNaoExisteException,CotaJaReservadaException {
+    public double reembolsar(Reserva reserva) throws ReservaNaoReembolsavelException, NullPointerException, ReservaNaoExisteException, CotaJaReservadaException, DadosInsuficientesException {
         double reembolso = 0.00;
         int dias = reserva.calcularDuracaoReserva();
-        if (reserva.isCancelada()) {
-            if(reserva.getDataFim().isBefore(LocalDateTime.now())){
-                throw new ReservaNaoReembolsavelException("Periodo da reserva expirado. Nao reembolsavel");
-            }
-                if (calcularTaxaExtra(reserva, dias) != 0) {
-                    reembolso += (calcularTaxaExtra(reserva, dias)) * 0.30;
-                } 
-           
+        if (reserva.getDataFim().isBefore(LocalDateTime.now())) {
+            throw new ReservaNaoReembolsavelException("Periodo da reserva expirado. Nao reembolsavel");
+        }
+        if (calcularTaxaExtra(reserva, dias) != 0) {
+            reembolso += (calcularTaxaExtra(reserva, dias)) * 0.30;
         }
         return reembolso;
     }
 
-    //verifica se periodo da reserva e valido
-    public void verificarPeriodo(Reserva reserva, LocalDateTime dataInicial, LocalDateTime dataFinal) throws PeriodoJaReservadoException, ForaPeriodoException, PeriodoNaoDisponivelParaReservaException{
-        
-        //verifica se datas sao validas
-        if (dataInicial.isAfter(dataFinal)) {
-            throw new ForaPeriodoException("A data inicial nao pode ser depois da data final");
-        }
 
-       //busca de reserva existente para o bem no periodo requisitado
-       //verifica se reserva pertence ao mesmo bem e se esta ativa
-       for (Reserva buscar : repositorioReservas.listar()) {
-           if (!buscar.isCancelada() && buscar.getBem().equals(reserva.getBem()) &&
-                   !(reserva.getDataFim().isBefore(buscar.getDataInicio()) || reserva.getDataInicio().isAfter(buscar.getDataFim()))) {
-               throw new PeriodoJaReservadoException("Periodo ja reservado.");
-           }
-       }
-
-       //Verifica se periodo requisitado pertence a cota de outro usuario
-       ArrayList<Cota> cotasBemAssociadoReserva = reserva.getBem().getCotas();
-       for (Cota cota : cotasBemAssociadoReserva) {
-           if (!cota.getStatusDeDisponibilidadeParaCompra() && !reserva.getUsuarioComum().equals(cota.getProprietario())) {
-               if ( (reserva.getDataInicio().isBefore(cota.getDataFim()) || reserva.getDataInicio().isEqual(cota.getDataFim())) &&
-               (reserva.getDataFim().isAfter(cota.getDataInicio()) || reserva.getDataFim().isEqual(cota.getDataInicio()))) {
-                   throw new PeriodoNaoDisponivelParaReservaException("Esse período está incluso numa cota vendida.");
-               }
-           }
-
-       }
-    }
-
-
-
-    //metodo para alterar periodo da reserva
-    public String alterarPeriodoReserva(long idReserva, LocalDateTime novaDataInicio, LocalDateTime novaDataFim)
-            throws ReservaNaoExisteException, ReservaJaCanceladaException, ForaPeriodoException,PeriodoJaReservadoException,PeriodoNaoDisponivelParaReservaException,ReservaNaoExisteException,CotaJaReservadaException{
-        
+    public String alterarPeriodoReserva(long idReserva, LocalDateTime novaDataInicio, LocalDateTime novaDataFim, Usuario usuario)
+            throws ReservaNaoExisteException, ReservaJaCanceladaException, ForaPeriodoException, PeriodoJaReservadoException, PeriodoNaoDisponivelParaReservaException, ReservaNaoExisteException, CotaJaReservadaException, ReservaJaExisteException, DadosInsuficientesException, UsuarioNaoPermitidoException {
         //busca reserva pelo id
         Reserva reserva = repositorioReservas.buscar(idReserva);
-
+        Bem bem = reserva.getBem();
         if (reserva == null) {
-            throw new ReservaNaoExisteException("Reserva inexistente");
+            throw new ReservaNaoExisteException("Reserva inexistente.");
         }
-
-        if (reserva.isCancelada()) {
-            throw new ReservaJaCanceladaException("Reserva ja cancelada");
+        if (!reserva.getUsuarioComum().equals(usuario)) {
+            throw new UsuarioNaoPermitidoException("Reserva esta em nome de outro usuario");
         }
-       
-        //verifica validade do periodo
-            verificarPeriodo(reserva, novaDataInicio, novaDataFim);
-       
-
-       // Atualizar dados da reserva    
-        reserva.setDataInicio(novaDataInicio);
+        //verifica se datas sao validas
+        if (novaDataInicio.isAfter(novaDataFim)) {
+            throw new ForaPeriodoException("A data inicial nao pode ser depois da data final.");
+        }
+        //verifica se a nova data ficara dentro do periodo de uma reserva outra
+        //verificar a parte inicial nova
+        if (novaDataInicio.isBefore(reserva.getDataInicio())) {
+            if (repositorioReservas.verificarConflitoNaReserva(bem.getId(), novaDataInicio, reserva.getDataInicio())) {
+                throw new ReservaJaExisteException("Conflito de Periodo.");
+            }
+        }
+        //verificar a parte final nova
+        if (novaDataFim.isAfter(reserva.getDataFim())) {
+            if (repositorioReservas.verificarConflitoNaReserva(bem.getId(), reserva.getDataFim(), novaDataFim)) {
+                throw new ReservaJaExisteException("Conflito de Periodo.");
+            }
+        }
+        //verifica se a nova data ficara dentro do periodo de uma cota
+        if (verificarConflitoDeDatasCota(reserva.getBem(), novaDataInicio, novaDataFim, reserva.getUsuarioComum())) {
+            throw new PeriodoNaoDisponivelParaReservaException("O periodo esta dentro de uma cota comprada por outro usuario.");
+        }
+        reserva.setDataInicio(novaDataInicio); //atualiza dados da reserva
         reserva.setDataFim(novaDataFim);
-        int duracao = reserva.calcularDuracaoReserva();
-        double taxaExtra=0.00;
-        //calcula possivel taxa extra para alterar o periodo
-            taxaExtra = calcularTaxaExtra(reserva, duracao);
-       
-        return gerarComprovanteReserva(reserva, taxaExtra);
+        return gerarComprovanteReserva(reserva);
     }
 
-//consulta de periodos disponiveis para reserva
-//considerando o usuario que deseja reservar
-public List<String> consultarDisponibilidadeParaReserva(Bem bem, LocalDateTime inicioPeriodo, LocalDateTime fimPeriodo, Usuario usuario) throws BemNaoExisteException {
-    List<String> periodosDisponiveis = new ArrayList<>();
-    LocalDateTime inicioAtual = inicioPeriodo;
-    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm:ss");
-    boolean existeReservaAtiva=false;
-    boolean existeCotaOcupada=false;
-    
-   // Buscar todas as reservas para o bem
-   List<Reserva> reservas = repositorioReservas.buscarReservasPorBem(bem.getId());
-   //Buscar as cotas do bem
-   ArrayList<Cota> cotasBemAssociado = bem.getCotas();
-
-    //verifica se datas sao validas
-    if (fimPeriodo.isBefore(inicioPeriodo)) {
-        throw new IllegalArgumentException("A data de inicio deve ser antes da data final");
-    }
-
-
-    while (!inicioAtual.isAfter(fimPeriodo)) {
-        periodosDisponiveis.add(inicioAtual.format(formatter));
-        
-          //verifica periodos em que ha cotas que ja foram vendidas
-        //e nao podem ser usadas para reservas de todos
-        for (Cota cota : cotasBemAssociado) {
-            if (!cota.getProprietario().equals(usuario)||!cota.getStatusDeDisponibilidadeParaCompra()||(cota.getProprietario().equals(usuario)&&!cota.isStatusDeDisponibilidadeParaReserva())) {
-                if ( (inicioAtual.isBefore(cota.getDataFim()) || inicioAtual.isEqual(cota.getDataFim())) &&
-                (fimPeriodo.isAfter(cota.getDataInicio()) || fimPeriodo.isEqual(cota.getDataInicio()))) {
-                existeCotaOcupada = true;
-                }
-            }
-        }
-
-       //verifica periodos em que ha reservas ativas
-       for (Reserva buscar : reservas) {
-        if (!buscar.isCancelada() &&
-                !(inicioAtual.isBefore(buscar.getDataInicio()) || inicioAtual.isAfter(buscar.getDataFim()))) {
-            existeReservaAtiva = true;
-        }
-    }
-
-        if(existeCotaOcupada||existeReservaAtiva){
-             periodosDisponiveis.remove(inicioAtual.toString());
-        }
-        inicioAtual = inicioAtual.plusDays(1);
-                }
-
-    return periodosDisponiveis;
-            }
-
-
-//relatorio
-//consulta de disponibilidade futura do bem
-    public List<String> consultarDisponibilidadeDoBem(Bem bem, LocalDateTime inicioPeriodo, LocalDateTime fimPeriodo) throws BemNaoExisteException {
+    // Consulta de periodos disponiveis para reserva
+    // Considerando o usuario que deseja reservar
+    public List<String> consultarDisponibilidadeParaReserva(Bem bem, LocalDateTime inicioPeriodo, LocalDateTime dataFim, Usuario usuario) throws BemNaoExisteException {
         List<String> periodosDisponiveis = new ArrayList<>();
         LocalDateTime inicioAtual = inicioPeriodo;
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm:ss");
-        boolean existeReservaAtiva=false;
-        boolean existeCotaOcupada=false;
-
-       // Buscar todas as reservas para o bem
-       List<Reserva> reservas = repositorioReservas.buscarReservasPorBem(bem.getId());
-       //Buscar as cotas do bem
-       ArrayList<Cota> cotasBemAssociado = bem.getCotas();
-
-        //verifica se datas sao validas
-        if (fimPeriodo.isBefore(inicioPeriodo) || inicioPeriodo.isBefore(LocalDateTime.now())) {
-            throw new IllegalArgumentException("\nInvalido");
+        boolean existeReservaAtiva;
+        boolean existeCotaOcupada;
+        // Verifica se datas sao validas
+        if (dataFim.isBefore(inicioPeriodo)) {
+            throw new IllegalArgumentException("A data de inicio deve ser antes da data final.");
         }
+        while (!inicioAtual.isAfter(dataFim)) {
+            // Buscar todas as reservas para o bem
+            List<Reserva> reservas = repositorioReservas.buscarReservasPorBem(bem.getId());
+            // Buscar as cotas do bem
+            ArrayList<Cota> cotasBemAssociado = bem.getCotas();
+            existeCotaOcupada = false;
+            existeReservaAtiva = false;
+            periodosDisponiveis.add(inicioAtual.toString());
+            //Verifica periodos em que ha cotas que ja foram vendidas e nao podem ser usadas para reservas de todos
+            for (int i = 0; i < cotasBemAssociado.size() && !existeCotaOcupada; i++) {
+                if ((cotasBemAssociado.get(i).getProprietario() != null && !cotasBemAssociado.get(i).getProprietario().equals(usuario) &&
+                        !cotasBemAssociado.get(i).getStatusDeDisponibilidadeParaCompra()) || cotasBemAssociado.get(i).getProprietario() != null &&
+                        (cotasBemAssociado.get(i).getProprietario().equals(usuario) && !cotasBemAssociado.get(i).getStatusDeDisponibilidadeParaReserva())) {
 
-  
-        while (!inicioAtual.isAfter(fimPeriodo)) {
-            periodosDisponiveis.add(inicioAtual.format(formatter));
-            
-              //verifica periodos em que ha cotas que ja foram vendidas
-            //e nao podem ser usadas para reservas de todos
-            for (Cota cota : cotasBemAssociado) {
-                if (!cota.getStatusDeDisponibilidadeParaCompra()) {
-                    if ( (inicioAtual.isBefore(cota.getDataFim()) || inicioAtual.isEqual(cota.getDataFim())) &&
-                    (fimPeriodo.isAfter(cota.getDataInicio()) || fimPeriodo.isEqual(cota.getDataInicio()))) {
-                    existeCotaOcupada = true;
-                    }
+                    existeCotaOcupada = verificarConflitoDeDatasCota(cotasBemAssociado.get(i), inicioAtual, dataFim);
                 }
             }
-
-           //verifica periodos em que ha reservas ativas
-           for (Reserva buscar : reservas) {
-            if (!buscar.isCancelada() &&
-                    !(inicioAtual.isBefore(buscar.getDataInicio()) || inicioAtual.isAfter(buscar.getDataFim()))) {
-                existeReservaAtiva = true;
+            // Verifica periodos em que ha reservas ativas
+            for (int i = 0; i < reservas.size() && !existeReservaAtiva; i++) {
+                existeReservaAtiva = verificarConflitoDeDatasReserva(reservas.get(i), inicioAtual, inicioAtual);
             }
-        }
-
-            if(existeCotaOcupada||existeReservaAtiva){
-                 periodosDisponiveis.remove(inicioAtual.toString());
+            if (existeCotaOcupada || existeReservaAtiva) {
+                periodosDisponiveis.remove(inicioAtual.toString());
             }
             inicioAtual = inicioAtual.plusDays(1);
-                    }
-
+        }
         return periodosDisponiveis;
+    }
+
+
+    private boolean verificarConflitoDeDatasCota(Cota cotaAtual, LocalDateTime dataInicio, LocalDateTime dataFim) {
+        boolean conflito = false;
+        if (cotaAtual.getDataInicio().isBefore(dataInicio) && cotaAtual.getDataFim().isAfter(dataInicio)) {
+            conflito = true;
+        } else if (cotaAtual.getDataInicio().isBefore(dataFim) && cotaAtual.getDataFim().isAfter(dataFim)) {
+            conflito = true;
+        } else if (cotaAtual.getDataInicio().isAfter(dataInicio) && cotaAtual.getDataFim().isBefore(dataFim)) {
+            conflito = true;
+        } else if (cotaAtual.getDataInicio().isEqual(dataInicio) || cotaAtual.getDataFim().isEqual(dataFim)) {
+            conflito = true;
+        }
+        return conflito;
+    }
+
+    private boolean verificarConflitoDeDatasCota(Bem bem, LocalDateTime dataInicio, LocalDateTime dataFim, Usuario usuario) {
+        boolean conflito = false;
+        List<Cota> cotasBemAssociado = bem.getCotas();
+        for (Cota cotaAtual : cotasBemAssociado) {
+            if ((cotaAtual.getProprietario() != null && !cotaAtual.getProprietario().equals(usuario)) &&
+                    !cotaAtual.getStatusDeDisponibilidadeParaCompra()) {
+                if (cotaAtual.getDataInicio().isBefore(dataInicio) && cotaAtual.getDataFim().isAfter(dataInicio)) {
+                    conflito = true;
+                } else if (cotaAtual.getDataInicio().isBefore(dataFim) && cotaAtual.getDataFim().isAfter(dataFim)) {
+                    conflito = true;
+                } else if (cotaAtual.getDataInicio().isAfter(dataInicio) && cotaAtual.getDataFim().isBefore(dataFim)) {
+                    conflito = true;
+                } else if (cotaAtual.getDataInicio().isEqual(dataInicio) || cotaAtual.getDataFim().isEqual(dataFim)) {
+                    conflito = true;
                 }
-        
-      
+            }
+        }
+        return conflito;
+    }
+
+    public List<Reserva> getReservas() {
+        return this.repositorioReservas.listar();
+    }
+
+    public List<Estadia> getEstadias() {
+        return this.repositorioEstadia.listar();
+    }
+
+    //Verifica se o periodo esta dentro da cota atual
+    private boolean verificarConflitoDeDatasReserva(Reserva reservaAtual, LocalDateTime dataInicio, LocalDateTime dataFim) {
+        if (reservaAtual.getDataInicio().isBefore(dataInicio) && reservaAtual.getDataFim().isAfter(dataInicio)) {
+            return true;
+        } else if (reservaAtual.getDataInicio().isBefore(dataFim) && reservaAtual.getDataFim().isAfter(dataFim)) {
+            return true;
+        } else if (reservaAtual.getDataInicio().isAfter(dataInicio) && reservaAtual.getDataFim().isBefore(dataFim)) {
+            return true;
+        } else if (reservaAtual.getDataInicio().isEqual(dataInicio) || reservaAtual.getDataFim().isEqual(dataFim)) {
+            return true;
+        }
+        return false;
+    }
+
 
     //metodo para calcular taxa extra
     //tambem e usado quando prolongo uma estadia
     //verifica se cota pertence ao usuario e corresponde ao periodo que deseja reservar
-    public double calcularTaxaExtra(Reserva reserva, int quantidadeDias) throws ReservaNaoExisteException, CotaJaReservadaException {
+    public double calcularTaxaExtra(Reserva reserva, int quantidadeDias) throws ReservaNaoExisteException, CotaJaReservadaException, DadosInsuficientesException {
         //taxa e uma porcentagem do preco de uma cota do bem
         double taxa = 0.00;
         boolean reservaTaxada = true;
         Promocao promocao = new Promocao();
 
         if (reserva == null) {
-            throw new NullPointerException("Reserva nao pode ser nula");
+            throw new ReservaNaoExisteException("Reserva nao pode ser nula.");
         }
 
-        if (repositorioReservas.buscarReserva(reserva) == null) {
-            throw new ReservaNaoExisteException("Reserva inexistente");
+        if (quantidadeDias < 1) {
+            throw new DadosInsuficientesException("Quantidade de dias invalida.");
         }
 
-    //deve verificar se ha alguma cota no periodo
-    //se nao houver, a taxa sera automaticamente aplicada
-    List<Cota> cotas = reserva.getBem().getCotas();
-    if(cotas==null){
-        reservaTaxada = true;
-    }
+        //deve verificar se ha alguma cota no periodo
+        //se nao houver, a taxa sera automaticamente aplicada
+        List<Cota> cotas = reserva.getBem().getCotas();
 
-        // Verifica se a cota cobre a reserva
-        else{
         for (Cota cota : cotas) {
-            if (cota.getProprietario().equals(reserva.getUsuarioComum())) {
+            if (cota.getProprietario() != null && cota.getProprietario().equals(reserva.getUsuarioComum())) {
                 boolean datasIguais = cota.getDataInicio().isEqual(reserva.getDataInicio()) &&
                         cota.getDataFim().isEqual(reserva.getDataFim());
 
@@ -387,47 +364,40 @@ public List<String> consultarDisponibilidadeParaReserva(Bem bem, LocalDateTime i
                         (cota.getDataInicio().isEqual(reserva.getDataInicio()) && !cota.getDataFim().isAfter(reserva.getDataFim())) ||
                         (!cota.getDataInicio().isBefore(reserva.getDataInicio()) && cota.getDataFim().isEqual(reserva.getDataFim())) ||
                         (cota.getDataInicio().isEqual(reserva.getDataInicio()) && cota.getDataFim().isEqual(reserva.getDataFim()));
-
                 if (datasIguais || cotaCobreReserva) {
-                    if (!cota.isStatusDeDisponibilidadeParaReserva()) {
-                        throw new CotaJaReservadaException("A cota já foi utilizada em uma reserva");
-
-                    } else {
-                        cota.setStatusDeDisponibilidadeParaReserva(false);
-                        reservaTaxada = false;
-                        break;
-                    }
+                    reservaTaxada = false;
+                    break;
                 }
             }
         }
-    }
 
-    //calcula a taxa baseada no preco de 1 cota e na quantidade de dias da reserva
-    //5% ao dia
+
+        //calcula a taxa baseada no preco de 1 cota e na quantidade de dias da reserva
+        //5% ao dia
         if (reservaTaxada) {
-            taxa = cotas.get(0).getPreco()*0.05*quantidadeDias;
-            double taxaPromocional = promocao.calcularTaxaPromocao(reserva.getDataInicio(), reserva.getUsuarioComum());
+            if (!cotas.isEmpty()) {
+                taxa = cotas.getFirst().getPreco() * 0.05 * quantidadeDias;
+            }
+            double taxaPromocional = promocao.calcularTaxaPromocao(reserva.getDataInicio().withHour(0).withMinute(0), reserva.getUsuarioComum());
             double desconto = taxa * taxaPromocional;
             taxa -= desconto;
         }
-
-
         return Math.max(taxa, 0.00);
     }
 
 
-
-    //metodo para gerar comprovante da reserva
-    public String gerarComprovanteReserva(Reserva reserva, double taxa) {
-        String reservaToString = reserva.toString();
-        return reservaToString + "Taxa extra: R$" + String.format("%.2f", taxa);
+    public String gerarComprovanteReserva(Reserva reserva) throws CotaJaReservadaException, DadosInsuficientesException, ReservaNaoExisteException {
+        int dias = reserva.calcularDuracaoReserva();
+        double taxa = calcularTaxaExtra(reserva, dias);
+        return reserva + "\nTaxa extra: R$" + String.format("%.2f", taxa);
     }
 
-    //metodo para gerar comprovante da estadia
-    public String gerarComprovanteEstadia(Estadia estadia, int duracao) {
-        String estadiaToString = estadia.toString();
-        return estadiaToString + "Duracao da estadia: " + String.format("%d", duracao) + " dias";
+
+    public String gerarComprovanteEstadia(Estadia estadia) {
+        int duracao = estadia.calcularDuracao();
+        return estadia + "Duracao da estadia: " + String.format("%d", duracao) + " dias";
     }
+
 
     public List<Reserva> listarReservasUsuario(Usuario usuario) {
         List<Reserva> resultado = new ArrayList<>();
@@ -436,97 +406,92 @@ public List<String> consultarDisponibilidadeParaReserva(Bem bem, LocalDateTime i
                 resultado.add(r);
             }
         }
-
         return resultado;
+    }
+
+
+    public List<Estadia> listarEstadiasUsuario(Usuario usuario) {
+        List<Estadia> resultado = new ArrayList<>();
+        for (Estadia e : repositorioEstadia.listar()) {
+            if (e.getReserva().getUsuarioComum().equals(usuario)) {
+                resultado.add(e);
+            }
+        }
+        return resultado;
+    }
+
+    public List<Reserva> buscarReservasPorMultiplosPeriodos(Bem bem, LocalDateTime dataInicio, LocalDateTime dataFim) {
+        List<Reserva> reservasDentroDosPeriodos = new ArrayList<>();
+
+        for (Reserva reserva : repositorioReservas.listar()) {
+            if (reserva.getBem().equals(bem)) {
+                boolean conflito = false;
+                LocalDateTime reservaInicio = reserva.getDataInicio();
+                LocalDateTime reservaFim = reserva.getDataFim();
+
+                if (reserva.getDataInicio().isBefore(dataInicio) && reserva.getDataFim().isAfter(dataInicio)) {
+                    conflito = true;
+                } else if (reserva.getDataInicio().isBefore(dataFim) && reserva.getDataFim().isAfter(dataFim)) {
+                    conflito = true;
+                } else if (reserva.getDataInicio().isAfter(dataInicio) && reserva.getDataFim().isBefore(dataFim)) {
+                    conflito = true;
+                } else if (reserva.getDataInicio().isEqual(dataInicio) || reserva.getDataFim().isEqual(dataFim)) {
+                    conflito = true;
+                }
+                // Verifica se há sobreposição da reserva com qualquer período e se ha estadia
+                if (conflito) {
+                    Estadia estadia = repositorioEstadia.buscarEstadiaPorReserva((int) reserva.getId());
+                    if(estadia != null) {
+                        reservasDentroDosPeriodos.add(reserva);
+                    }
+                }
+            }
+        }
+        return reservasDentroDosPeriodos;
     }
 
 
 //RELATORIOS
 
-//HISTORICO DE USO DE UM BEM
-public List<Estadia> historicoDeUsoBem(int idBem){
-    List<Estadia> historico = new ArrayList<>();
-    for(Estadia estadia: repositorioEstadia.buscarEstadiasPorBem(idBem)){
-        historico.add(estadia);
+    //HISTORICO DE USO DE UM BEM
+    public List<Estadia> historicoDeUsoBem(int idBem) {
+        List<Estadia> historico = new ArrayList<>();
+        for (Estadia estadia : repositorioEstadia.buscarEstadiasPorBem(idBem)) {
+            historico.add(estadia);
+        }
+        return historico;
     }
-    return historico;
-}
 
 
-//VER PERIODOS MAIS RESERVADOS
-    public List<String> PeriodosMaisReservados(int idBem) {
+    public List<Map.Entry<LocalDate, Long>> periodosMaisReservados(int idBem) {
         List<Reserva> reservas = repositorioReservas.buscarReservasPorBem(idBem);
         List<Estadia> estadias = repositorioEstadia.buscarEstadiasPorBem(idBem);
-        List<String> periodos = new ArrayList<>();  
-        List<Integer> contagens = new ArrayList<>();  
-
-        
-        for (Reserva reserva : reservas) {
-            LocalDate dataInicio = reserva.getDataInicio().toLocalDate();
-            LocalDate dataFim = reserva.getDataFim().toLocalDate();
-            String periodo = dataInicio + " - " + dataFim;
-
-            adicionarNosMaisReservados(periodo, periodos, contagens);
-        }
-
-        //so considerar periodos de estadias com reserva null
-        //pois comprova o check out e nao havera repeticao
-        for (Estadia estadia : estadias) {
-            if (estadia.getReserva() == null) {  
-                LocalDateTime dataInicioEstadia = estadia.getDataInicio();
-                LocalDateTime dataFimEstadia = estadia.getDataFim();
-
-                // Verificar se a estadia cobre ou se sobrepoe com a reserva
-                for (Reserva reserva : reservas) {
-                    LocalDateTime dataInicioReserva = reserva.getDataInicio();
-                    LocalDateTime dataFimReserva = reserva.getDataFim();
-
-                    if (dataInicioEstadia.isBefore(dataFimReserva) && dataFimEstadia.isAfter(dataInicioReserva)) {
-                        // Ajustar as datas para contabilizar todos os dias dentro da estadia
-                        LocalDateTime periodoInicio = dataInicioEstadia.isBefore(dataInicioReserva) ? dataInicioEstadia : dataInicioReserva;
-                        LocalDateTime periodoFim = dataFimEstadia.isAfter(dataFimReserva) ? dataFimEstadia : dataFimReserva;
-
-                        String periodo = periodoInicio.toLocalDate() + " - " + periodoFim.toLocalDate();
-                        adicionarNosMaisReservados(periodo, periodos, contagens);
-                    }
-                }
-            }
-        }
-
-        // Ordenando com bubble sort
-        List<String> resultado = new ArrayList<>();
-        for (int i = 0; i < contagens.size(); i++) {
-            for (int j = i + 1; j < contagens.size(); j++) {
-                if (contagens.get(i) < contagens.get(j)) {
-                    int tempContagem = contagens.get(i);
-                    contagens.set(i, contagens.get(j));
-                    contagens.set(j, tempContagem);
-                    String tempPeriodo = periodos.get(i);
-                    periodos.set(i, periodos.get(j));
-                    periodos.set(j, tempPeriodo);
-                }
-            }
-        }
-
-
-        for (int i = 0; i < periodos.size(); i++) {
-            resultado.add(" - Quantidade: " + contagens.get(i) + ": " + periodos.get(i));
-        }
-
+        List<Map.Entry<LocalDate, Long>> resultado = calcularContagemPorData(reservas, estadias);
+        // Ordenar em ordem decrescente pelo número de reservas
+        resultado.sort(Comparator.comparing(Map.Entry<LocalDate, Long>::getValue).reversed());
         return resultado;
     }
 
-    // metodo auxiliar para adicionar um periodo completo 
-    private void adicionarNosMaisReservados(String periodo, List<String> periodos, List<Integer> contagens) {
-        int index = periodos.indexOf(periodo);
 
-        // Se o periodo ja existe, incrementa a contagem
-        if (index != -1) {
-            contagens.set(index, contagens.get(index) + 1);
-        } else {
-            // Se nao existe, adiciona um novo periodo com contagem 1
-            periodos.add(periodo);
-            contagens.add(1);
+    private static List<Map.Entry<LocalDate, Long>> calcularContagemPorData(List<Reserva> reservas, List<Estadia> estadias) {
+        Map<LocalDate, Long> contagemDias = new HashMap<>();
+        // Contabiliza reservas
+        for (Reserva reserva : reservas) {
+            LocalDate data = reserva.getDataInicio().toLocalDate();
+            while (!data.isAfter(reserva.getDataFim().toLocalDate())) {
+                contagemDias.compute(data, (k, v) -> (v == null) ? 1L : v + 1);
+                data = data.plusDays(1);
+            }
         }
+        // Contabiliza estadias
+        for (Estadia estadia : estadias) {
+            LocalDate data = estadia.getDataInicio().toLocalDate();
+            while (!data.isAfter(estadia.getDataFim().toLocalDate())) {
+                contagemDias.compute(data, (k, v) -> (v == null) ? 1L : v + 1);
+                data = data.plusDays(1);
+            }
+        }
+        return new ArrayList<>(contagemDias.entrySet());
     }
+
 }
